# weather-client

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  partitions.csv  request_example.json  sdkconfig  sdkconfig.ci
cmd/: main.py  weather  zones.csv
components/bme280/: CMakeLists.txt  bme280.cpp  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  bsp.cpp  bsp.h  helpers.cpp  helpers.h  http_config_handler.h  http_data_handler.h  http_get_handler.h  http_put_handler.h  json_keys.h  main.c  main.cpp  main.h  sensor_mgmt.c  sensor_mgmt.h  uploader.h  wireless.c  wireless.h
main/client_handlers/: client_handlers.c  client_handlers.h  http_handlers.c  http_handlers.h  mqtt_handlers.c  mqtt_handlers.h
main/hardware/: Sensor.h
main/hardware/ds3231/: ds3231.cpp  ds3231.h
main/hardware/sdcard/: sdcard.cpp  sdcard.h
main/http_handlers/: http_about_handler.h  http_config_handler.h  http_data_handler.h  http_test_handler.h  json_keys.h
main/network/: uploader.c  wlan.c
main/network/include/: uploader.h
main/serial/: i2c.c  i2c.cpp  uart.cpp
main/serial/include/: i2c.h  uart.h
main/services/: power.cpp  power.h
main/services/logger/: logger.cpp  logger.h
main/services/serial/: i2c.cpp  uart.cpp
main/services/serial/include/: i2c.h  uart.h
main/services/storage/: sdcard.cpp  sdcard.h
main/services/wireless/: mqtt.cpp  wifi.cpp
main/services/wireless/include/: mqtt.h  wifi.h
main/wireless/: http.cpp  mqtt.cpp  wlan.cpp
main/wireless/include/: http.h  mqtt.h  wlan.h
scripts/: request_example.json  uploader.py
uploader/: main.py
(+56 files in other folders)
